Sandbox now connecting via generated client to controller correctly.
- Updated v2 of the validation action to return an actual model, so its easily accessible via the swagger generated client. (the client suppresses http statuses by default)
