# api/Zeil.CreditCardValidation.Api/Models/CreditCardValidationResponseModel.cs
@@ -1,0 +1,10 @@
+namespace Zeil.CreditCardValidation.Api.Models;
+
+/// <summary>
+/// The credit card number model
+/// </summary>
+public class CreditCardValidationResponseModel
+{
+    /// <summary> Whether the request passed validation result</summary> 
+    public bool IsValid { get; set; }
+}
