# api/Zeil.CreditCardValidation.Api/generated-openapi-specs/Zeil.CreditCardValidation.Api.swagger.v2.json
@@ -26,31 +26,31 @@
           }
         },
         "responses": {
-          "400": {
-            "description": "Card number is invalid",
+          "500": {
+            "description": "There was an unspecified problem."
+          },
+          "200": {
+            "description": "Card number validated",
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "$ref": "#/components/schemas/CreditCardValidationResponseModel"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "$ref": "#/components/schemas/CreditCardValidationResponseModel"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
+                  "$ref": "#/components/schemas/CreditCardValidationResponseModel"
                 }
               }
             }
           },
-          "200": {
-            "description": "Card number validated"
-          },
-          "500": {
-            "description": "There was an unspecified problem."
+          "400": {
+            "description": "Card number is invalid"
           }
         }
       }
@@ -70,32 +70,16 @@
         "additionalProperties": false,
         "description": "The credit card number model"
       },
-      "ProblemDetails": {
+      "CreditCardValidationResponseModel": {
         "type": "object",
         "properties": {
-          "type": {
-            "type": "string",
-            "nullable": true
-          },
-          "title": {
-            "type": "string",
-            "nullable": true
-          },
-          "status": {
-            "type": "integer",
-            "format": "int32",
-            "nullable": true
-          },
-          "detail": {
-            "type": "string",
-            "nullable": true
-          },
-          "instance": {
-            "type": "string",
-            "nullable": true
+          "isValid": {
+            "type": "boolean",
+            "description": "Whether the request passed validation result"
           }
         },
-        "additionalProperties": { }
+        "additionalProperties": false,
+        "description": "The credit card number model"
       }
     }
   }
